# huffman_coding_web_app

./: Makefile  README.md
backend/: Cargo.toml  Makefile  request.http
backend/src/: huffman_coding.rs  lib.rs  main.rs  models.rs
backend/src/huffman/: algorithms.rs  coding.rs  decoding.rs  encoding.rs  mod.rs  models.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Input.vue  Output.vue  TextInput.vue
