[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Osoro <fanosoro@gmail.com>" ] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
