[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Osoro <fanosoro@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.2.1"
reqwest = { version = "0.11.4", features = ["json", "rustls-tls"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
rocket_cors = "0.5.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
multipart = { version = "0.16.1", default-features = false, features = [
    "server",
] }
